--- a/DL2/environment.yml
+++ b/DL2/environment.yml
@@ -1,7 +1,7 @@
 # Conda environment 
 #
 # Install:
-# conda env create -f environment.yml
+# mamba env create -f environment.yml
 # conda activate EDconvert
 #
 name: EDconvert
@@ -16,4 +16,3 @@ dependencies:
   - click
   - python==3.7
   - uproot4
-  - matplotlib
