--- a/DL3-IRFs/Dockerfile
+++ b/DL3-IRFs/Dockerfile
@@ -1,4 +1,8 @@
-From rootproject/root:latest
+# Dockerfile to build DL3-IRFs Converter for Eventdisplay
+From rootproject/root:6.26.06-ubuntu22.04
+
+LABEL maintainer.name="Eventdisplay Team"
+LABEL maintainer.email="gernot.maier@desy.de"
 
 # force ubunto to use bash for /bin/sh
 RUN yes no | dpkg-reconfigure dash
@@ -11,14 +15,14 @@ WORKDIR /data/
 ENV DATA /data/
 
 # Install and compile cfitsio
-RUN wget http://heasarc.gsfc.nasa.gov/FTP/software/fitsio/c/cfitsio-3.49.tar.gz && \
-    tar -xzf cfitsio-3.49.tar.gz && \
-    cd cfitsio-3.49 && \
+RUN wget --quiet http://heasarc.gsfc.nasa.gov/FTP/software/fitsio/c/cfitsio-4.2.0.tar.gz && \
+    tar -xzf cfitsio-4.2.0.tar.gz && \
+    cd cfitsio-4.2.0 && \
     ./configure --prefix=${DATA}/ && \
     make && \
     make install && \
     make clean && \
-    cd .. && rm -f cfitsio-3.49.tar.gz
+    cd .. && rm -f cfitsio-4.2.0.tar.gz
 
 ENV LD_LIBRARY_PATH "${DATA}/lib:${LD_LIBRARY_PATH}"
 
