--- a/.github/workflows/packages-dl2.yml
+++ b/.github/workflows/packages-dl2.yml
@@ -13,7 +13,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-dl3-irf-image:
+  build-dl2-image:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -47,6 +47,6 @@ jobs:
           context: .
             # push: ${{ github.event_name != 'pull_request' }}
           push: ${{ github.event_name != 'discussion_comment' }}
-          file: ./Converters/dl2/Dockerfile
+          file: ./Converters/DL2/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}-dl2
           labels: ${{ steps.meta.outputs.labels }}-dl2
