--- a/.github/workflows/packages-dl3-irfs.yml
+++ b/.github/workflows/packages-dl3-irfs.yml
@@ -45,8 +45,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-            # push: ${{ github.event_name != 'pull_request' }}
-          push: ${{ github.event_name != 'discussion_comment' }}
+          push: ${{ github.event_name != 'pull_request' }}
           file: ./Converters/DL3-IRFs/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}-dl3-irfs
           labels: ${{ steps.meta.outputs.labels }}-dl3-irfs
